--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Eureka</h1>
+    <img src="images/Logo.png" alt="Sample Photo" />
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
