Added Image for Legends of Eternalia Logo. Tested hyperlink to go to website

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,6 +6,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Eureka</h1>
-    <img src="images/Logo.png" alt="Sample Photo" />
+    <img src="Images/Logo.png" alt="Sample Photo"  Width="400" Height="220"  />   
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Go to my website <a href="http://www.legendsofeternalia.com/?page_id=2&lang=en"> Legends of Eternalia </a>.</p>
+    <p>Go to my website <a href="http://www.legendsofeternalia.com/?page_id=2&lang=en"> <img src="Images/Legends.png" alt="Sample Photo"  Width="600" Height="190"  />   </a>.</p>
 </div>
